--- a/src/styles/tailwindcss.scss
+++ b/src/styles/tailwindcss.scss
@@ -2,6 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  blockquote {
+    @apply border-l-4 border-l-slate-200 bg-slate-50 p-3;
+  }
+
+  code,
+  code span {
+    -webkit-font-smoothing: auto;
+    font-feature-settings: "liga" on, "calt" on;
+    text-rendering: optimizeLegibility;
+    font-weight: 500;
+    font-family: "JetBrains Mono", sans-serif;
+  }
+
+  table th:first-child {
+    position: relative !important;
+  }
+
+  h1:first-child,
+  h2:first-child,
+  h3:first-child,
+  h4:first-child {
+    margin-top: unset !important;
+  }
+}
+
 @layer components {
   .keep-all {
     word-break: keep-all;
